<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conspire</string>

    <!-- Action title -->
    <string name="action_friends">Show Friends</string>
    <string name="action_logout">Logout</string>
    <string name="action_about_app">About App</string>
    <string name="action_settings">Settings</string>
    <string name="action_view">View</string>
    <string name="action_leave_channel">Leave Channel</string>
    <string name="action_done">Done</string>
    <string name="action_later">Later</string>
    <string name="action_webcam">Join Video</string>
    <string name="action_webcam_off">Leave Video</string>

    <!-- Activity title -->
    <string name="activity_main_title">Channels</string>
    <string name="activity_about_app_title">About App</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_channel_info_title">Channel Info</string>
    <string name="activity_channel_member_title">Members</string>
    <string name="activity_create_channel_title">Create Channel</string>
    <string name="activity_friend_title">Friends</string>

    <!-- About App Activity -->
    <string name="app_version">Version</string>
    <string name="copyright">Copyright</string>

    <!-- Settings Activity -->
    <string name="setting_login_method">Login Method</string>
    <string name="setting_user_email">Your Email</string>
    <string name="setting_username">Your Username (Tap to change)</string>

    <!-- Login Activity -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password (6 or more)</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Username (3 or more)</string>
    <string name="ime_action_next_text">Next</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="no_account_text">New here?</string>
    <string name="has_account_text">Have account?</string>

    <!-- Main Activity -->
    <string name="tab_all_channels_title">All Channels</string>
    <string name="tab_my_channels_title">My Channels</string>
    <string name="all_channel_list_empty_message">There are no channels right now.</string>
    <string name="my_channel_list_empty_message">You have not subscribed to any channel.</string>

    <!-- Create Channel Activity -->
    <string name="channel_category_title">Category</string>
    <string name="channel_name_title">Name</string>
    <string name="channel_description_title">Description</string>
    <string name="channel_image_title">Image</string>
    <string name="customize_category_text">Enter category</string>
    <string name="enter_category_hint">Enter category here</string>
    <string name="enter_name_hint">Enter name here</string>
    <string name="enter_description_hint">Enter description here</string>

    <!-- Channel Info Activity -->
    <string name="loading_text">Loading&#8230;</string>
    <string name="channel_name_format">Name: %s</string>
    <string name="channel_category_format">Category: %s</string>
    <string name="channel_admin_format">Admin: %s</string>
    <string name="channel_member_format">Member: %d</string>
    <string name="channel_description_format">Description: %s</string>

    <!-- Channel Member Activity -->
    <string name="member_name_me_suffix">(Me)</string>
    <string name="member_name_admin_suffix">(Admin)</string>
    <string name="member_name_friend_suffix">(Friend)</string>
    <string name="send_email_text">Send Email</string>
    <string name="no_email_text">No email provided</string>
    <string name="add_friend_text">Add to friend list</string>
    <string name="chat_with_friend_text">Chat with friend</string>

    <!-- Channel Chat Activity -->
    <string name="chat_message_hint_text">Enter your message here</string>
    <string name="ime_action_done_text">Done</string>
    <string name="sender_me_text">Me</string>
    <string name="chat_empty_message">There are no chats in this channel.</string>
    <string name="record_audio_button_text">Hold to record</string>
    <string name="click_to_listen_message">Click to play</string>
    <string name="playing_audio_message">Playing&#8230;</string>
    <string name="new_chat_notification_text">You received a new message.</string>

    <!-- Friend Activity -->
    <string name="tab_accepted_friends">Friends</string>
    <string name="tab_pending_friend_requests">Pending</string>
    <string name="accepted_friend_list_empty_message">You have no friend connections now.</string>
    <string name="pending_friend_requests_empty_message">You have no pending friend requests.</string>
    <string name="reject_request_text">Reject</string>
    <string name="accept_request_text">Accept</string>
    <string name="delete_request_text">Delete</string>
    <string name="postpone_request_text">Postpone</string>

    <!-- Dialog Fragment -->
    <string name="login_progress_dialog_message">Logging in&#8230;</string>
    <string name="logout_dialog_message">Do you want to logout?</string>
    <string name="change_username_dialog_title">Change Username</string>
    <string name="join_channel_dialog_message">Do you want to join this channel?</string>
    <string name="join_channel_progress_dialog_message">Joining Channel&#8230;</string>
    <string name="recording_progress_dialog_message">Recording&#8230;</string>
    <string name="leave_channel_progress_dialog_message">Leaving Channel&#8230;</string>
    <string name="leave_channel_dialog_message">Do you want to leave this channel?</string>
    <string name="create_channel_dialog_message">Do you want to create this channel?</string>
    <string name="create_channel_progress_dialog_message">Creating Channel&#8230;</string>
    <string name="friend_request_dialog_message">User %s wants to connect with you as friend. Accept?</string>
    <string name="join_video_chat_dialog_message">Do you want to join video chat for this channel? (Camera and mic access will be automatically granted)</string>
    <string name="leave_video_chat_dialog_message">Do you want to leave video chat for this channel?</string>

    <!-- Notification -->
    <string name="friend_request_notification_title">New Friend Request</string>
    <string name="friend_request_notification_message">You received a friend request from %s.</string>
    <string name="ongoing_video_call_notification_title">Ongoing Video Call</string>
    <string name="ongoing_video_call_notification_message">You have an ongoing video call in channel %s.</string>

    <!-- Toast Message -->
    <string name="login_expired_message">Your current session has expired. Please login again.</string>
    <string name="login_error_message">Login failed. Please try again.</string>
    <string name="login_firebase_error_message">Cannot login. %s</string>
    <string name="auth_with_firebase_error_message">Cannot authenticate with Firebase. Please try login again.</string>
    <string name="logout_error_message">Logout failed. Please try again.</string>
    <string name="email_format_invalid_message">Email format invalid.</string>
    <string name="password_invalid_message">Password invalid.</string>
    <string name="confirm_password_invalid_message">Password does not match.</string>
    <string name="username_invalid_message">Username invalid.</string>
    <string name="change_username_failed_message">Failed to update your username. Please try again.</string>
    <string name="join_channel_failed_message">Failed to join the channel. Please try again.</string>
    <string name="send_chat_failed_message">Failed to send chat. Please try again.</string>
    <string name="channel_category_invalid_message">Category invalid.</string>
    <string name="channel_name_invalid_message">Name invalid.</string>
    <string name="channel_description_invalid_message">Description invalid.</string>
    <string name="create_channel_failed_message">Failed to create the channel. Please try again.</string>
    <string name="friend_request_failed_message">Failed to send friend request. Please try again.</string>
    <string name="friend_request_postponed_message">You can go to friend list and check unresolved request.</string>
    <string name="friend_request_accept_failed_message">Failed to add friend. Please try again.</string>
    <string name="friend_request_reject_failed_message">Failed to reject the request. Please try again.</string>
    <string name="friend_request_delete_failed_message">Failed to delete tge request. Please try again.</string>
    <string name="friend_request_rejected_message">Your request to add %s has been rejected.</string>
    <string name="friend_add_sucessful_message">You have added %s as your new friend.</string>
    <string name="web_rtc_not_supported_message">Your Android system version does not support Real time communication. Please upgrade to 5.0 and above.</string>
    <string name="video_chat_in_progress_message">Video chat starting, please wait for a few seconds.</string>
    <string name="leave_video_chat_reminder_message">Video chat in progress. Please leave video chat first.</string>

</resources>
