<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.citrix.wrekt.activity.ChannelChatActivity"
    tools:ignore="contentDescription">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_navigate_back_white"
        app:titleTextAppearance="@style/Toolbar.SmallTextAppearance">

        <android.support.v7.widget.ActionMenuView
            android:id="@+id/action_menu_view"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top|end"
            android:background="@color/primary"
            android:gravity="center"
            android:padding="10dp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/send_chat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/chat_method_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_voice" />

            <ViewSwitcher
                android:id="@+id/chat_method_view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/send_chat_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground"
                        android:padding="10dp"
                        android:src="@drawable/ic_send" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/chat_message_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/send_chat_image_button"
                        android:layout_toLeftOf="@id/send_chat_image_button"
                        android:layout_toStartOf="@id/send_chat_image_button"
                        android:hint="@string/chat_message_hint_text"
                        android:imeActionLabel="@string/ime_action_done_text"
                        android:imeOptions="actionDone"
                        android:maxLines="3"
                        android:minHeight="?attr/actionBarSize"
                        android:textColorHint="@color/divider_color" />

                </RelativeLayout>

                <Button
                    android:id="@+id/record_audio_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/round_corner_button"
                    android:elevation="@dimen/toolbar_elevation"
                    android:text="@string/record_audio_button_text"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </ViewSwitcher>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friend_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/send_chat_container"
            android:background="@color/list_background"
            android:padding="6dp" />

        <LinearLayout
            android:id="@+id/chat_empty_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/send_chat_container"
            android:background="@color/list_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/ic_empty_chat_illustration" />

            <TextView
                android:id="@+id/empty_message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/chat_empty_message"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/new_message_snackbar_container"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@id/send_chat_container"
            android:background="#323232"
            android:visibility="gone">

            <TextView
                android:id="@+id/view_new_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@string/roboto_medium"
                android:gravity="center_vertical|end"
                android:padding="10dp"
                android:text="@string/action_view"
                android:textColor="@color/accent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/unread_message_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="20dp"
                android:layout_toLeftOf="@id/view_new_message_text_view"
                android:layout_toStartOf="@id/view_new_message_text_view"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/new_chat_notification_text"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
